--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title> Mariana da Silva </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="img/black_cursor.png" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
 
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -51,6 +54,7 @@
 
 
     <main>
+
         <div class="banner">
             <div class="bloco">
 
@@ -87,7 +91,7 @@
 
             </div>
 
-            <div class="bloco">
+            <div class="bloco bloco3">
                 <div class="aboutme">
                     <div id="alinha">
                         <h1 class="ohno"> A little about me</h1>
@@ -141,28 +145,38 @@
         <div class="fot1">
             <div class="fotline">
                 <div class="caixafooter">
-                    <h3 style="color:white">INSTAGRAM > ></h3>
-                    <p style="color:white"> @marianassilvas</p>
+                    <a href="https://instagram.com/marianassilvas" target="blank">
+                        <h3 style="color:white">INSTAGRAM</h3>
+                        <p style="color:white">@marianassilvas</p>
+                    </a>
                 </div>
                 <div class="caixafooter" id="margem">
-                    <h3 style="color:white">LINKEDIN > ></h3>
-                    <p style="color:white">@marianassilvas</p>
+                    <a href="https://www.linkedin.com/in/marianassilvas/" target="blank">
+                        <h3 style="color:white">LINKEDIN</h3>
+                        <p style="color:white">@marianassilvas</p>
+                    </a>
                 </div>
             </div>
             <div class="fotline">
                 <div class="caixafooter">
-                    <h3 style="color:white">GITHUB > ></h3>
-                    <p style="color:white">@marianassilvas</p>
+                    <a href="https://github.com/marianassilvas" target="blank">
+                        <h3 style="color:white">GITHUB</h3>
+                        <p style="color:white">@marianassilvas</p>
+                    </a>
                 </div>
                 <div class="caixafooter" id="margem">
-                    <h3 style="color:white">BEHANCE > > </h3>
-                    <a><p style="color:white">@marianassilvas</p></a>
+                    <a href="https://www.behance.net/marianatsilva" target="blank">
+                        <h3 style="color:white">BEHANCE</h3>
+                        <p style="color:white">@marianatsilva</p>
+                    </a>
                 </div>
             </div>
         </div>
         <div class="fot2">
-            <h2 class="ohno" style="color:white"> Email me!</h2>
-            <p style="color:white">crania.mariana@gmail.com</p>
+            <a href="mailto: crania.mariana@gmail.com">
+                <h2 class="ohno" style="color:white">Email me!</h2>
+                <p style="color:white">crania.mariana@gmail.com</p>
+            </a>
 
         </div>
         <div class="fot3">
@@ -176,7 +190,7 @@
     <script src="jquery.min.js"></script>
     <script src="scroll.js"></script>
     <script src="aos.js"></script>
-    <script src="bubble.js"></script>
+    <script src="appear.js"></script>
 </body>
 
 </html>
