--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="line"></div>
             <ul>
                 <li><a class="linknav" href="https://www.behance.net/marianatsilva" target="blank">work</a></li>
-                <li><a class="linknav" href="img/Cv_marianasilva44.pdf" target="blank">curriculum vitae</a></li>
+                <li><a class="linknav" href="img/CV_EN_MarianadaSilva.pdf" target="blank">curriculum vitae</a></li>
 
 
             </ul>
